fixing the overlapping HTML

--- a/css/styles.css
+++ b/css/styles.css
@@ -212,7 +212,7 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 44%;
 }
 #restaurant-name {
   color: #f18200;
@@ -220,7 +220,7 @@ nav h1 a {
   font-size: 20pt;
   font-weight: 200;
   letter-spacing: 0;
-  margin: 15px 0 30px;
+  margin: 25px 0 30px;
   text-transform: uppercase;
   line-height: 1.1;
 }
